[gd_scene load_steps=4 format=3 uid="uid://b7qcbfueopawi"]

[ext_resource type="Script" uid="uid://br3gsokp76xid" path="res://scenes/ui_menus/pause_ui/pause_ui.gd" id="1_srqh7"]
[ext_resource type="PackedScene" uid="uid://dfgljper65nl0" path="res://objects/overlay/overlay.tscn" id="3_jfond"]
[ext_resource type="PackedScene" uid="uid://dnhexewq1iydd" path="res://objects/button/button.tscn" id="3_v4qvo"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_srqh7")

[node name="Overlay" parent="." instance=ExtResource("3_jfond")]
process_mode = 2

[node name="Resume" parent="." instance=ExtResource("3_v4qvo")]
z_index = 100
position = Vector2(0, -120)
label_text = "Resume"

[node name="Restart" parent="." instance=ExtResource("3_v4qvo")]
z_index = 100
position = Vector2(0, -60)
label_text = "Restart"

[node name="Controls" parent="." instance=ExtResource("3_v4qvo")]
z_index = 100
label_text = "Controls"

[node name="BackToMenu" parent="." instance=ExtResource("3_v4qvo")]
z_index = 100
position = Vector2(0, 60)
label_text = "Back to Menu"

[node name="Exit" parent="." instance=ExtResource("3_v4qvo")]
z_index = 100
position = Vector2(0, 120)
label_text = "Exit"

[connection signal="button_pressed" from="Resume" to="." method="_on_resume_button_pressed"]
[connection signal="button_pressed" from="Restart" to="." method="_on_restart_button_pressed"]
[connection signal="button_pressed" from="Controls" to="." method="_on_controls_button_pressed"]
[connection signal="button_pressed" from="BackToMenu" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="button_pressed" from="Exit" to="." method="_on_exit_button_pressed"]
